# relai-sdk

./: .gitignore  404.html  AGENTS.md  CNAME  LICENSE.md  README.md  benchmark.html  critico.html  evaluator.html  getting-started.html  index.html  maestro.html  mkdocs.yml  mockers.html  objects.inv  pyproject.toml  pytest.ini  ruff.toml  simulator.html  types.html
.github/workflows/: bump-version.yml  unit-tests.yml  upload-to-package-index.yml
api/: benchmark.html  critico.html  evaluator.html  index.html  maestro.html  mockers.html  simulator.html  types.html
docs/: benchmark.md  critico.md  evaluator.md  getting-started.md  index.md  maestro.md  types.md
docs/api/: evaluator.md  index.md  mockers.md  simulator.md
docs/assets/: mantine-theme.css
docs/overview/: basic-usage.md  using-critico.md
docs/tutorials/: annotation-benchmark.md  custom-evaluator.md  index.md  mock-mcp-server.md  persona-set.md
examples/: agentic-rag.py  simple-llm-agent.py
examples/advanced/: chat-agent (advanced evaluation).py  chat-agent (advanced logging).py  chat-agent (advanced simulation).py  customized_logging.py  evaluator_group.py  simulation_tape.py
examples/basic/: agentic-rag (simulate->evaluate->optimize).py  agentic-rag-stateful-mocker (simulate->evaluate->optimize).py  question-answering-agent (simulate->evaluate->optimize)-with-benchmark.py  saved_config.json  summarization-agent (simulate->annotate->optimize)-part-1.py  summarization-agent (simulate->annotate->optimize)-part-2.py  weather-bot-agent (simulate).py
examples/basic/assets/: sample_questions.csv
examples/basic/simulate/: simple_agent.py
examples/basic/simulate->annotate->optimize/: 1.(simulate->annotate)summarization-agent.py  2.(annotate->optimize)summarization-agent.py
examples/basic/simulate->evaluate->optimize/: agentic-rag.py
notebooks/advanced/: chat-agent (advanced evaluation).ipynb  chat-agent (advanced logging).ipynb  chat-agent (advanced simulation).ipynb
notebooks/basic/: agentic-rag (simulate->evaluate->optimize).ipynb  question-answering-agent (simulate->evaluate->optimize)-with-benchmark.ipynb  stock-assistant (simulate->evaluate->optimize).ipynb  summarization-agent (simulate->annotate->optimize).ipynb  weather-bot-agent (simulate).ipynb
overview/: basic-usage.html  using-critico.html
relai/: __init__.py  _client.py  _exceptions.py  benchmark.py  data.py  exporter.py  flags.py  logger.py  simulator.py  utils.py
relai/critico/: __init__.py  critico.py  evaluate.py
relai/maestro/: __init__.py  graph.py  optimizer.py  params.py  utils.py
relai/mocker/: __init__.py  base_mocker.py  persona.py  stateful_mocker.py  tool.py
relai/schema/: visual.py
search/: search_index.json
tests/: conftest.py
tests/relai/: test_benchmark.py  test_client.py  test_simulator.py
tests/relai/critico/: test_benchmark.py  test_evaluate.py
tests/relai/mocker/: test_stateful_mocker.py
tutorials/: annotation-benchmark.html  custom-evaluation.html  custom-evaluator.html  index.html  mock-mcp-server.html  persona-set.html
